--- a/GuiasLabDPS/navegacion/package.json
+++ b/GuiasLabDPS/navegacion/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.19",
     "expo": "~49.0.15",
@@ -19,7 +20,8 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.3",
     "react-native-safe-area-context": "^4.7.3",
-    "react-native-screens": "^3.26.0"
+    "react-native-screens": "^3.26.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
